--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -12,12 +12,12 @@ header {
 img {
   width: 100%;
   height: 100%;
-  transition: transform 0.5s;
+  transition: 0.5s;
 }
 img:hover {
   transform: scale(1.04);
 }
-h2 {
+.header_title_name {
   color: #1b1818;
   text-align: left;
   font-size: 2rem;
@@ -44,7 +44,7 @@ h1 {
   max-width: 46.125rem; /* 738px / 16px = 46.125rem */
   margin-top: 10.625rem;
 }
-p {
+.header_text {
   margin-top: 0, 75rem;
   color: #1b1818;
   text-align: center;
@@ -53,7 +53,7 @@ p {
   font-weight: 700;
   line-height: normal;
 }
-a {
+.header_buttom {
   cursor: pointer;
   margin: 0 auto;
   margin-top: 2rem;
@@ -71,12 +71,11 @@ a {
   gap: 0.25rem;
   transition: transform 0.5s;
 }
-a:hover {
+.header_buttom:hover {
   background-color: #e1d0b9;
   transition: 0.9s;
 }
 /* adaptive */
-
 @media (min-width: 375px) and (max-width: 768px) {
   *,
   * {
@@ -104,17 +103,17 @@ a:hover {
     color: #cfc0ab;
     font-size: 10vw;
   }
-  h2 {
+  .header_title_name {
     margin-top: 9.5vw;
     font-size: 6.5vw;
     text-align: center;
   }
-  a {
+  .header_buttom {
     margin-top: 8vw;
     font-size: 5vw;
     width: 70vw;
   }
-  p {
+  .header_text {
     margin: 0 auto;
     margin-top: 5vw;
     font-size: 5vw;
