--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;600;700&family=Poiret+One&display=swap");
 body {
   font-size: 16px;
   font-family: Cormorant Garamond;
@@ -14,4 +14,7 @@ body {
   margin: 0;
   padding: 0;
   border: none;
+}
+a {
+  text-decoration: none;
 }
