--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,17 +6,17 @@ header {
   width: 1440px;
   margin: 0 auto;
 }
-.header_img {
-  max-width: 34.8rem;
-}
+
 img {
   width: 100%;
+
   height: 100%;
   transition: 0.5s;
 }
 img:hover {
   transform: scale(1.04);
 }
+
 .header_title_name {
   color: #1b1818;
   text-align: left;
@@ -45,7 +45,6 @@ h1 {
   margin-top: 10.625rem;
 }
 .header_text {
-  margin-top: 0, 75rem;
   color: #1b1818;
   text-align: center;
   font-size: 1.5rem;
@@ -68,7 +67,6 @@ h1 {
   padding: 0.5rem 1rem;
   justify-content: center;
   align-items: center;
-  gap: 0.25rem;
   transition: transform 0.5s;
 }
 .header_buttom:hover {
@@ -84,6 +82,7 @@ h1 {
   }
   header {
     width: 100%;
+    background: chartreuse;
     text-align: center;
     background-image: url("../img/ava-final-mobile.png");
     background-size: 100%;
@@ -97,7 +96,7 @@ h1 {
   }
   .blur {
     margin-top: 95vw;
-    margin-bottom: 16vw;
+    margin-bottom: 14vw;
   }
   h1 {
     color: #cfc0ab;
@@ -119,5 +118,10 @@ h1 {
     font-size: 5vw;
     width: 57vw;
     color: #cfc0ab;
+  }
+}
+@media (min-width: 768px) {
+  header {
+    max-height: 800px;
   }
 }
