--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -1,5 +1,8 @@
+.main {
+  width: 1440px;
+  margin: 0 auto;
+}
 .container_about {
-  max-width: 1440px;
   width: 100%;
   margin: 0 auto;
   background-color: #1b1818;
@@ -21,8 +24,7 @@
   margin: 0 auto;
   margin-top: 32px;
   display: flex;
-  justify-content: space-between;
-  width: 572px;
+  justify-content: center;
   padding-bottom: 120px;
 }
 .main_btn1 {
@@ -40,6 +42,7 @@
   gap: 0.25rem;
   transition: transform 0.5s;
   border: 2px solid #cfc0ab;
+  margin-right: 24px;
 }
 .main_btn2 {
   cursor: pointer;
@@ -64,4 +67,25 @@
 .main_btn2:hover {
   background-color: #e1d0b9;
   transition: 0.9s;
+}
+@media (min-width: 375px) and (max-width: 768px) {
+  .container_about {
+    padding: 0 16px 0 16px;
+  }
+  .main_two_button {
+    padding-bottom: 15vw;
+  }
+  .main {
+    width: 100%;
+  }
+
+  .main_btn1 {
+    margin-right: 18px;
+    width: 50vw;
+    font-size: 3.5vw;
+  }
+  .main_btn2 {
+    width: 50vw;
+    font-size: 3.5vw;
+  }
 }
