--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -69,11 +69,15 @@
   transition: 0.9s;
 }
 @media (min-width: 375px) and (max-width: 768px) {
+  .main_text_about:first-child {
+    padding-top: 68px;
+  }
+
   .container_about {
     padding: 0 16px 0 16px;
   }
   .main_two_button {
-    padding-bottom: 15vw;
+    padding-bottom: 68px;
   }
   .main {
     width: 100%;
@@ -134,7 +138,6 @@
 }
 
 .about_img {
-  background-color: #1b1818;
   width: 373px;
   height: 578px;
 }
@@ -184,6 +187,34 @@
 }
 @media (min-width: 375px) and (max-width: 768px) {
   .container_about_two_first {
+    background: linear-gradient(
+      131deg,
+      #b3a48e 10.38%,
+      rgba(207, 192, 171, 0) 78.25%
+    );
+  }
+  .about_text2 {
+    margin-top: 12px;
+  }
+  .container_about_two2 {
+    margin-top: 24px;
+    gap: 0;
+  }
+  .container_about_two2 img {
+    padding-top: 0;
+    padding-top: 24px;
+  }
+  .title_about_one1 {
+    margin-top: 32px;
+  }
+  .container_about_two {
+    padding-top: 46px;
+    gap: 0;
+  }
+  .container_about_two img {
+    padding: 24px 0 0 0;
+  }
+  .container_about_two_first {
     padding-bottom: 22px;
   }
   .main_btn3 {
@@ -209,7 +240,7 @@
     align-items: center;
     transition: transform 0.5s;
 
-    margin-top: 8vw;
+    margin-top: 24px;
     font-size: 5vw;
     width: 70vw;
   }
