--- a/src/components/Mainblock.module.css
+++ b/src/components/Mainblock.module.css
@@ -98,6 +98,7 @@
   font-size: 32px;
   font-weight: 400;
   text-decoration-line: underline;
+  margin-top: 32px;
 }
 .lesson_title {
   text-align: center;
@@ -120,10 +121,12 @@
 }
 .about_lesson_slayder {
   margin-top: 32px;
-  border-bottom: 3px solid black;
+  /* border-bottom: 3px solid black; */
   font-size: 32px;
   max-width: 416px;
   font-family: Poiret One;
+  font-weight: 400;
+  text-decoration: underline;
 }
 .lesson_text_slayder {
   font-family: Poiret One;
@@ -135,6 +138,7 @@
   padding-left: 4px;
   margin-top: 14.5px;
   max-width: 565px;
+  font-weight: 400;
 }
 .lesson_text_slayder_mod {
   font-family: Poiret One;
@@ -146,17 +150,29 @@
   padding-left: 4px;
   margin-top: 24px;
   max-width: 390px;
+  font-weight: 400;
 }
 .lesson_text_slayder_mod2 {
   font-family: Poiret One;
   font-size: 22px;
   border-left: 4px solid #b8aa96;
-
+  font-weight: 400;
   display: flex;
   align-items: center;
   padding-left: 4px;
   margin-top: 24px;
   max-width: 390px;
+}
+.lesson_text_slayder_mod3 {
+  font-family: Poiret One;
+  font-size: 22px;
+  border-left: 4px solid #b8aa96;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  padding-left: 4px;
+  margin-top: 24px;
+  max-width: 565px;
 }
 .slayder_block_text {
   display: flex;
@@ -190,17 +206,75 @@
 .slayder {
   display: none;
 }
+.lesson_video_mobile {
+  display: none;
+}
 @media (min-width: 375px) and (max-width: 768px) {
-  .lesson_video {
-    margin-top: 18px;
-    max-width: 100%;
-  }
   .lesson_img {
     display: none;
   }
   .slayder {
     display: block;
     margin-top: 8px;
-    max-height: 300px;
+  }
+  .lesson_video {
+    display: none;
+  }
+  .lesson_video_mobile {
+    margin-top: 18px;
+    display: block;
+  }
+  .lesson_all {
+    margin-top: 32px;
+    margin-top: 16px;
+  }
+  .lesson_number {
+    font-size: 24px;
+  }
+  .lesson_title {
+    font-size: 24px;
+  }
+  .lesson_subtitle {
+    margin-top: 12px;
+  }
+  .about_lesson_slayder {
+    margin-top: 18px;
+    font-size: 20px;
+    max-width: 260px;
+  }
+  .slayder_block_text {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0;
+    margin-top: 9.5px;
+  }
+  .strelka_parant {
+    display: flex;
+    justify-content: center;
+    margin-top: 24px;
+  }
+  .lesson_number {
+    margin-top: 24px;
+  }
+  .lesson_text_slayder {
+    width: 100%;
+    font-size: 18px;
+  }
+  .lesson_text_slayder_mod {
+    width: 100%;
+    font-size: 18px;
+  }
+  .lesson_text_slayder_mod2 {
+    width: 100%;
+    font-size: 18px;
+    margin-top: 12px;
+  }
+  .lesson_text_slayder_mod3 {
+    width: 100%;
+    font-size: 18px;
+    margin-top: 12px;
+  }
+  .slayder_block_text {
+    flex-direction: column;
   }
 }
