--- a/src/components/Mainblock.module.css
+++ b/src/components/Mainblock.module.css
@@ -68,6 +68,9 @@
     padding-top: 46px;
     font-size: 24px;
   }
+  .lesson_title_one {
+    font-size: 24px;
+  }
   .lesson {
     margin-top: 24px;
   }
@@ -210,6 +213,9 @@
   display: none;
 }
 @media (min-width: 375px) and (max-width: 768px) {
+  .lesson_text {
+    font-size: 18px;
+  }
   .lesson_img {
     display: none;
   }
